--- a/app/src/main/res/layout/fragment_exercicios.xml
+++ b/app/src/main/res/layout/fragment_exercicios.xml
@@ -30,6 +30,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/CardViewSegunda"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:clickable="true"
@@ -64,6 +65,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/CardViewQuartaFeira"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:clickable="true"
