--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,14 @@
         android:textSize="18sp" />
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira"
+        android:gravity="center"
+        android:textColor="@color/Cor01"
+        android:textSize="18sp"
+        android:text="Seu personal:"/>
+    <TextView
         android:id="@+id/txtNomePersonal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
