--- a/app/src/main/res/layout/criar_exercicio_layout.xml
+++ b/app/src/main/res/layout/criar_exercicio_layout.xml
@@ -14,6 +14,16 @@
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:text="Cadastrar exercício"
+            android:textColor="@color/Cor01"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtNomeExercicio"
             android:layout_width="match_parent"
@@ -89,6 +99,18 @@
                 app:backgroundTint="@color/Cor01" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnCadastrarExercicio"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="Cadastrar"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            app:backgroundTint="@color/Cor01" />
 
     </LinearLayout>
 </LinearLayout>
