Commit dia 06/11 leo gerlach

--- a/app/src/main/res/layout/fragment_lista_de_exercicios.xml
+++ b/app/src/main/res/layout/fragment_lista_de_exercicios.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
 
             <SearchView
-                android:id="@+id/idPesquisa"
+                android:id="@+id/idPesquisaExe"
                 android:layout_width="390dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
