--- a/app/src/main/res/layout/fragment_personalizar_exercicio.xml
+++ b/app/src/main/res/layout/fragment_personalizar_exercicio.xml
@@ -16,39 +16,23 @@
         android:clickable="true"
         android:focusable="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/costas" />
-
-    </LinearLayout>
         <LinearLayout
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="155dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/NumSerie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/saira"
-                android:text="Segunda"
-                android:textColor="@color/black"
-                android:textSize="30sp" />
-
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/costas" />
         </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
+        android:id="@+id/cardNomeExePersonal"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_marginLeft="155dp"
         android:orientation="vertical">
 
@@ -56,9 +40,9 @@
             android:id="@+id/NomeExe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-5dp"
             android:fontFamily="@font/saira"
             android:text="Barra"
-            android:layout_marginBottom="-5dp"
             android:textColor="@color/black"
             android:textSize="35sp" />
 
@@ -66,23 +50,171 @@
             android:id="@+id/NomeTreino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-15dp"
             android:fontFamily="@font/saira"
             android:text="Treino ABC"
             android:textColor="@color/black"
-            android:textSize="25sp"
-            android:layout_marginTop="-15dp"/>
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/NomeDiaTreino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-10dp"
             android:fontFamily="@font/saira"
             android:text="Segunda"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            android:layout_marginTop="-10dp"/>
+            android:textSize="15sp" />
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/cardTempoDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardNomeExePersonal"
+        android:gravity="right"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/NomeTempoDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:fontFamily="@font/saira"
+            android:text="Tempo de Descanso"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/NumTempoDesc"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="35dp"
+            android:background="@drawable/fundonumdescanso"
+            android:fontFamily="@font/saira"
+            android:gravity="center"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/cardNumSerie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardNomeExePersonal"
+        android:gravity="left"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/NomeNumSerie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/saira"
+            android:text="Nº de série"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/NumSerie"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/fundonumdescanso"
+            android:fontFamily="@font/saira"
+            android:gravity="center"
+            android:textSize="10sp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardTempoDesc"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="1º"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="   "
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <EditText
+            android:id="@+id/NumeroDeSeriePersonal1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:fontFamily="@font/saira"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="reps"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="   "
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="x"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="   "
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <EditText
+            android:id="@+id/NumeroDePesoPersonal1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:fontFamily="@font/saira"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/saira"
+            android:text="Kg"
+            android:textColor="@color/black"
+            android:textSize="30sp" />
+    </LinearLayout>
 
 </RelativeLayout>
