--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo2" />
+        android:src="@drawable/logodois" />
 
     <TextView
         android:id="@+id/txtBemVindo"
