--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -21,7 +21,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo2" />
+            android:src="@drawable/logodois" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/txtEmailLogin"
