--- a/app/src/main/res/layout/novo_cadastro_layout.xml
+++ b/app/src/main/res/layout/novo_cadastro_layout.xml
@@ -19,7 +19,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo2" />
+            android:src="@drawable/logodois" />
 
         <RadioGroup
             android:id="@+id/radiogroupTipoCadastro"
