--- a/app/src/main/res/layout/fragment_perfil_aluno.xml
+++ b/app/src/main/res/layout/fragment_perfil_aluno.xml
@@ -7,18 +7,6 @@
     android:background="#d9d7d7"
     tools:context=".PerfilAlunoFragment">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/topAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#1A1A26"
-        android:minHeight="?attr/actionBarSize"
-        app:menu="@menu/menu"
-        app:navigationIcon="@drawable/back"
-        app:navigationIconTint="@color/white"
-        app:title="Meu Perfil"
-        app:titleTextColor="#F6F3F3" />
-
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -70,7 +58,7 @@
             android:textStyle="bold"
             app:icon="@drawable/identity"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
 
         </com.google.android.material.button.MaterialButton>
 
@@ -88,7 +76,7 @@
             android:textStyle="bold"
             app:icon="@drawable/graphic"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
         </com.google.android.material.button.MaterialButton>
 
         <com.google.android.material.button.MaterialButton
@@ -105,7 +93,7 @@
             android:textStyle="bold"
             app:icon="@drawable/personal"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
 
         </com.google.android.material.button.MaterialButton>
 
@@ -123,7 +111,7 @@
             android:textStyle="bold"
             app:icon="@drawable/feedback"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
 
         </com.google.android.material.button.MaterialButton>
 
@@ -141,7 +129,7 @@
             android:textStyle="bold"
             app:icon="@drawable/ajuda"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
 
         </com.google.android.material.button.MaterialButton>
 
@@ -159,10 +147,9 @@
             android:textSize="20dp"
             android:textStyle="bold"
             app:iconSize="30dp"
-            app:iconTint="@color/Cor03">
+            app:iconTint="@color/pretogym">
 
         </com.google.android.material.button.MaterialButton>
-
 
     </RelativeLayout>
 
