Atualizando Abas de criação de listas de treino

--- a/app/src/main/res/layout/fragment_aba_add_treino_dia_form.xml
+++ b/app/src/main/res/layout/fragment_aba_add_treino_dia_form.xml
@@ -30,7 +30,7 @@
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/etNomeTreino"
+            android:id="@+id/edtNomeTreino"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="                                            "
